# swagger.yaml
@@ -1,23 +1,4 @@
 ---
-swagger: '2.0'
-info:
-  version: 1.0.0
-  title: Member Project CRUD
-  description: Member Project Application API
-  license:
-    name: MIT
-    url: https://opensource.org/licenses/MIT
-host: localhost:80
-basePath: "/"
-tags:
-- name: Users
-  description: API for users in the system
-schemes:
-- http
-consumes:
-- application/json
-produces:
-- application/json
 paths:
   "/emergency":
     get:
